--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="utf-8">
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <title>React App</title>
+    <title>Kalina</title>
   </head>
   <body>
     <div id="root"></div>
